--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "homepage" : "http://{iko2000}.github.io/{TEST-PRO-Tip-app}",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
