--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{    "homepage" : "http://{iko2000}.github.io/Tip-calculator",
   "name": "lesson-3",
   "version": "0.1.0",
   "private": true,
@@ -14,7 +14,6 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy" : "npm run build",
-    "homepage" : "http://{iko2000}.github.io/{TEST-PRO-Tip-app}",
     "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
