--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{    "homepage" : "http://{iko2000}.github.io/Tip-calculator",
+{    "homepage" : "http://iko2000.github.io/Tip-calculator",
   "name": "lesson-3",
   "version": "0.1.0",
   "private": true,
